[gd_scene load_steps=6 format=3 uid="uid://cdk27txxhqq8t"]

[ext_resource type="TileSet" uid="uid://dv62lh7q063i7" path="res://assets/tile_sets/data_tile_set.tres" id="1_rw70g"]
[ext_resource type="Script" path="res://scenes/animated_tile_map/animated_tile_map.gd" id="1_yk6b7"]
[ext_resource type="TileSet" uid="uid://b2uyupxn4alrv" path="res://assets/tile_sets/ground_layer_tile_set.tres" id="2_yj6x5"]
[ext_resource type="TileSet" uid="uid://d03shcelh66bv" path="res://assets/tile_sets/anim_tile_set.tres" id="3_h8q1x"]
[ext_resource type="PackedScene" uid="uid://o14dmkqtk73r" path="res://components/mouse_controller/mouse_controller.tscn" id="5_ytfvh"]

[node name="animated_tile_map" type="Node2D"]
script = ExtResource("1_yk6b7")

[node name="ground_layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
position = Vector2(-64, -64)
tile_set = ExtResource("2_yj6x5")

[node name="animated_layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
position = Vector2(-64, -64)
tile_set = ExtResource("3_h8q1x")

[node name="data_layer" type="TileMapLayer" parent="."]
unique_name_in_owner = true
visible = false
tile_set = ExtResource("1_rw70g")

[node name="mouse_controller" parent="." instance=ExtResource("5_ytfvh")]
